--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                        class="donate-btn"
                        onclick="trackDonation()">
                         <span class="heart-icon">💖</span>
-                        <span>Traktir Developer Coffee</span>
+                        <span>Traktir Developer-nya Kopi yuk</span>
                         <span>🌸</span>
                     </a>
                     
